# jira-api-rs

./: .gitignore  Cargo.toml
src/: lib.rs
src/types/: application_properties.rs  application_roles.rs  attachments.rs  auditing.rs  avatars.rs  comments.rs  mod.rs
